<?xml version="1.0"?>
<package>
  <name>simple_local_planner</name>
  <version>0.0.0</version>
  <description>The simple_local_planner package</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
